services/prometheus/clever2-test/prometheus-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - prometheus.clever2-test.vsmart00.com
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - prometheus.clever2-test.vsmart00.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: prometheus-cert
        mode: SIMPLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-virtualservice
spec:
  gateways:
    - prometheus-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-server-http
            port:
              number: 9090
      timeout: 30s
